<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:overScrollMode="never"
    tools:context=".sentotp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginTop="80dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/sent"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/otp_verifaction1"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/we_will_sent_you_otp_on_this_number"
            android:textSize="15sp"
            android:textColor="@color/black"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/enter_mobile_number"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/black"

            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:orientation="horizontal">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="40dp"
         android:text="@string/_91"
         android:gravity="center"
         android:textStyle="bold"
         android:textSize="16sp"
         android:layout_marginStart="30dp"
         android:textColor="#1C1C1C"
         />

            <EditText
                android:id="@+id/inpputmobile"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@drawable/nullbackground"
                android:hint="@string/enter_the_mobile_number"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textColor="#1C1C1C"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="TouchTargetSizeCheck" />




        </LinearLayout>
        <View
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:background="#131313"
            android:layout_marginRight="60dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="7dp"/>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/Getotp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:background="@drawable/button"
            android:text="@string/get_otp"
            android:textColor="#546E7A"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="VisualLintButtonSize" />


            <ProgressBar
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:id="@+id/progressbar"
                android:visibility="gone"/>


        </FrameLayout>


    </LinearLayout>


</ScrollView>